# crew-ai

./: README.md  basic_flow.py
crew/request_routing_crew/: request_routing_crew.py
crewai_flow/: README.md  pyproject.toml
crewai_flow/src/crewai_flow/: main.py  poem.txt
crewai_flow/src/crewai_flow/crews/form_filler/: form_filler_crew.py
crewai_flow/src/crewai_flow/crews/form_filler/config/: agents.yaml  tasks.yaml
crewai_flow/src/crewai_flow/crews/orchestrator/: orchestrator_crew.py
crewai_flow/src/crewai_flow/crews/orchestrator/config/: agents.yaml  tasks.yaml
crewai_flow/src/crewai_flow/crews/poem_crew/: poem_crew.py
crewai_flow/src/crewai_flow/crews/poem_crew/config/: agents.yaml  tasks.yaml
crewai_flow/src/crewai_flow/crews/request_router/: request_router_crew.py
crewai_flow/src/crewai_flow/crews/request_router/config/: tasks.yaml
crewai_flow/src/crewai_flow/crews/simple_rag/: simple_rag_crew.py
crewai_flow/src/crewai_flow/crews/simple_rag/config/: agents.yaml  tasks.yaml
